--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="prefetch" href="rubik-latin-regular.woff2">
   <meta charset="UTF-8">
   <title></title>
   <meta name="viewport" content="width=device-width">
